--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@ html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body {
-    background-color: rgb(48, 48, 48);
+    background-color: rgb(0, 0, 0);
     height: 100vh;
 }
 canvas {
@@ -19,7 +19,7 @@ canvas {
     top: 50%;
     transform: translate(-50%, -50%);
     background: radial-gradient(circle, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
-    background-color: #585858;
+    background-color: #72cdd7;
     background-size: 100% 100%;
     box-sizing: border-box;
     box-shadow: 0 0 25px 0 rgba(255, 255, 255, 0.8);
