--- a/kuukihokke-/stylesheet.css
+++ b/kuukihokke-/stylesheet.css
@@ -19,7 +19,7 @@ canvas {
     top: 50%;
     transform: translate(-50%, -50%);
     background: radial-gradient(circle, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
-    background-color: #72cdd7;
+    background-image: url("./SoccerGround.png");
     background-size: 100% 100%;
     box-sizing: border-box;
     box-shadow: 0 0 25px 0 rgba(255, 255, 255, 0.8);
@@ -32,6 +32,7 @@ canvas {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+
 }
 #wrapper .popup {
     position: absolute;
